# mathforge

./: .gitignore  README.md  SLM Brainlift.md  cursor_slm_for_competition_math_problem.md  frontier.jsonl  generated_problems.md  opus_judgments.jsonl  problems_handcrafted.md  pyproject.toml  rich_problems_review.md  slm.jsonl
Results/: bench30_fullv2.tex  bench30_results.tex  generated_problemsv2.tex  kept_problems.txt  mathforge_bench30.txt  mathforge_compare.tex  mathforge_compare.txt
data/: data_integrity_report.json  frontier_verification_report.json  technique_coverage.json  techniques.json  train.jsonl  train_pt.jsonl
docs/: basic_behavior_eval_runbook.md  eval_suite_demonstration_report.md  insight_pipeline_plan.md  model_training_architecture_report.md  slm_demo_script_3_to_5_minutes.md
eval/: behavior_suite_basic_v1.jsonl  dedup_quarantine_v1.json  frozen_eval_v1.json
notebooks/: bench30_blind_cell.txt  best_of_n_validity_cell.txt  compare_eval_latex_cell.txt  mathforge_basic_behavior_eval_colab.ipynb  mathforge_qlora_colab.ipynb  mathforge_qlora_creative205_colab.ipynb  mathforge_qlora_full2956_colab.ipynb
prompts/: README.md  behavior_generation_v1.md  combo_blind_audit_v1.md  combo_bridge_generation_v1.md  combo_bridge_judge_v1.md  combo_corpus_novelty_v1.md  combo_creativity_repair_v1.md  combo_faithfulness_v1.md  combo_faithfulness_v2.md  combo_problem_generation_v1.md  combo_problem_generation_v2.md  combo_shell_generation_v1.md  combo_shell_judge_v1.md  crux_extraction_v1.md  difficulty_judge_v1.md  distill_generation_v1.md  elegance_judge_v1.md  (+8 more)
(+90 files in other folders)
