[project]
name = "mathforge"
version = "0.1.0"
description = "Pipeline for generating elegant AIME/olympiad-level competition math problems."
readme = "README.md"
authors = [
    { name = "Arthur Xu", email = "arteemanxu@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "datasets>=5.0.0",
    "openai>=2.44.0",
    "pylatexenc>=2.10",
    "sqlmodel>=0.0.39",
    "typer>=0.26.8",
]

[project.scripts]
mathforge = "mathforge.cli:app"

[build-system]
requires = ["uv_build>=0.11.25,<0.12.0"]
build-backend = "uv_build"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]
